# Mystic-Gems

./: CMakeCache.txt  CMakeLists.txt  Makefile  Mystic-Gems  README.md  build.gradle  cmake_install.cmake  compile_commands.json
android/: AndroidManifest.xml  build.gradle
android/res/values/: strings.xml
android/src/main/java/com/tbane/mysticgems/android/: AndroidLauncher.java
core/src/main/java/com/tbane/mysticgems/: AssetsManager.java  Renderer.java  SoundManager.java  Time.java  main.java
core/src/main/java/com/tbane/mysticgems/GUI/: Button.java  ButtonStates.java  ButtonWithText.java  ElementGUI.java  Font.java  GUI.java  TextInput.java
core/src/main/java/com/tbane/mysticgems/Game/: ComboText.java  Cursor.java  Fragment.java  Game.java  Gem.java  GemColor.java  GemEffect.java
core/src/main/java/com/tbane/mysticgems/GemGame/: ComboText.java  Cursor.java  Fragment.java  Game.java  GameStates.java  Gem.java  GemColor.java  GemEffect.java
core/src/main/java/com/tbane/mysticgems/MyInput/: MyInput.java  MyInputProcessor.java  TouchEvent.java
include/: About.hpp  Button.hpp  ColorIndex.hpp  ComboText.hpp  Cursor.hpp  ElementGUI.hpp  Font.hpp  Fragment.hpp  Game.hpp  Gem.hpp  Instructions.hpp  Layout.hpp  MainMenu.hpp  SoundManager.hpp  Textures.hpp  Timer.hpp  Window.hpp
src/: About.cpp  Button.cpp  ColorIndex.cpp  ComboText.cpp  Cursor.cpp  ElementGUI.cpp  Font.cpp  Fragment.cpp  Game.cpp  Gem.cpp  Instructions.cpp  Layout.cpp  MainMenu.cpp  SoundManager.cpp  Textures.cpp  Timer.cpp  Window.cpp  main.cpp
(+8 files in other folders)
